1. eslint + prettier 2. config fixes

--- a/GoldenLeague.Api/appsettings.json
+++ b/GoldenLeague.Api/appsettings.json
@@ -1,10 +1,17 @@
 {
+  "ConnectionStrings": {
+    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueApi;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "AppSettings": {
+    "ApiUser": "milton",
+    "ApiPassword": "friedman"
   },
   "AllowedHosts": "*"
 }
