--- a/GoldenLeague.Database/appsettings.json
+++ b/GoldenLeague.Database/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "GoldenFarmerDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueDatabase;Integrated Security=True"
+    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueDatabase;Integrated Security=True"
   }
 }
