--- a/GoldenLeague/appsettings.json
+++ b/GoldenLeague/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueWeb;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
@@ -8,7 +11,7 @@
   },
   "AppSettings": {
     "WebApi": {
-      "Url": "https://localhost:44389",
+      "Url": "https://localhost:44306",
       "UserName": "milton",
       "Password": "friedman"
     },
