--- a/GoldenLeague.Api/GoldenLeague.Api.csproj
+++ b/GoldenLeague.Api/GoldenLeague.Api.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
