--- a/GoldenLeague.Database/GoldenLeague.Database.csproj
+++ b/GoldenLeague.Database/GoldenLeague.Database.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="linq2db" Version="3.4.4" />
     <PackageReference Include="linq2db.SqlServer" Version="3.4.4" />
     <PackageReference Include="NETStandard.Library" Version="2.0.3" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
