--- a/GoldenLeague/ClientApp/.eslintrc.json
+++ b/GoldenLeague/ClientApp/.eslintrc.json
@@ -1,18 +1,14 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es2021": true
     },
     "extends": [
+        // "eslint:recommended",
         // "plugin:vue/essential",
         "plugin:vue/vue3-recommended",
-        "airbnb-base",
         "plugin:prettier/recommended"
     ],
-    "globals": {
-        "Atomics": "readonly",
-        "SharedArrayBuffer": "readonly"
-    },
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
@@ -22,9 +18,12 @@
         "vue"
     ],
     "rules": {
-        "prettier/prettier": ["error", { "endOfLine": "auto", "trailingComma": "none", "tabWidth": 2 }],
-        "no-plusplus": "off",
-        "no-debugger": "warn",
-        "import/no-unresolved": "off"
+        "prettier/prettier": [
+            "error", 
+            { 
+                "endOfLine": "auto", 
+                "trailingComma": "none",
+                "tabWidth": 2            }
+        ]
     }
 }
