--- a/GoldenLeague/ClientApp/package.json
+++ b/GoldenLeague/ClientApp/package.json
@@ -6,32 +6,35 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "./node_modules/.bin/eslint .",
-    "lint:fix": "./node_modules/.bin/eslint . --fix"
+    "lint-fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
+    "'": "file:../../../../../../plugins/vuetify'",
     "axios": "^0.20.0-0",
     "bootstrap": "^4.5.3",
     "core-js": "^3.7.0",
+    "latest-version": "^6.0.0",
+    "npm": "^7.24.1",
     "vue": "^3.0.2",
     "vue-loader-v16": "npm:vue-loader@^16.0.0-alpha.3",
-    "vue-router": "^4.0.0-rc.5"
+    "vue-router": "^4.0.0-rc.5",
+    "vuetify": "^2.5.9"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
     "@vue/cli-plugin-babel": "^4.5.9",
     "@vue/cli-plugin-eslint": "^4.5.9",
     "@vue/cli-service": "^4.5.9",
     "@vue/compiler-sfc": "^3.0.2",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.18.0",
     "prettier": "^2.4.1",
-    "typescript": "^4.4.3"
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0"
   },
   "eslintConfig": {
     "root": true,
