--- a/GoldenLeague/ClientApp/package.json
+++ b/GoldenLeague/ClientApp/package.json
@@ -9,16 +9,13 @@
     "lint-fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
-    "'": "file:../../../../../../plugins/vuetify'",
     "axios": "^0.20.0-0",
     "bootstrap": "^4.5.3",
     "core-js": "^3.7.0",
-    "latest-version": "^6.0.0",
-    "npm": "^7.24.1",
     "vue": "^3.0.2",
     "vue-loader-v16": "npm:vue-loader@^16.0.0-alpha.3",
     "vue-router": "^4.0.0-rc.5",
-    "vuetify": "^2.5.9"
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.9",
@@ -32,9 +29,7 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.18.0",
-    "prettier": "^2.4.1",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0"
+    "prettier": "^2.4.1"
   },
   "eslintConfig": {
     "root": true,
