--- a/GoldenLeague/client-app/package.json
+++ b/GoldenLeague/client-app/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-i18n": "^8.26.3",
