New DB tables and queries in API - Get matchbetting from DB

--- a/GoldenLeague/appsettings.json
+++ b/GoldenLeague/appsettings.json
@@ -10,8 +10,8 @@
     }
   },
   "AppSettings": {
-    "WebApi": {
-      "Url": "https://localhost:44306",
+    "RestApi": {
+      "Url": "https://localhost:44306/api/v1",
       "UserName": "milton",
       "Password": "friedman"
     },
