--- a/GoldenLeague.Api/GoldenLeague.Api.csproj
+++ b/GoldenLeague.Api/GoldenLeague.Api.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="linq2db" Version="3.4.4" />
     <PackageReference Include="linq2db.SqlServer" Version="3.4.4" />
     <PackageReference Include="NLog" Version="4.7.11" />
@@ -16,6 +17,10 @@
   <ItemGroup>
     <ProjectReference Include="..\GoldenLeague.Database\GoldenLeague.Database.csproj" />
     <ProjectReference Include="..\GoldenLeague.TransportModels\GoldenLeague.TransportModels.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
