--- a/GoldenLeague/client-app/package.json
+++ b/GoldenLeague/client-app/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "roboto-fontface": "*",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.26.3",
     "vue-router": "^3.2.0",
