--- a/GoldenLeague/client-app/package.json
+++ b/GoldenLeague/client-app/package.json
@@ -14,10 +14,10 @@
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "roboto-fontface": "*",
-    "v-mask": "^2.3.0",
     "vue": "^2.6.11",
     "vue-i18n": "^8.26.3",
     "vue-router": "^3.2.0",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
