--- a/GoldenLeague.Database/GoldenLeague.Database.csproj
+++ b/GoldenLeague.Database/GoldenLeague.Database.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GoldenLeague.Common\GoldenLeague.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="Enums\DbEnumHelper.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>DbEnumHelper.cs</LastGenOutput>
