--- a/GoldenLeague.StatisticsWorker/GoldenLeague.StatisticsWorker.csproj
+++ b/GoldenLeague.StatisticsWorker/GoldenLeague.StatisticsWorker.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="5.0.1" />
     <PackageReference Include="System.Text.Json" Version="5.0.2" />
