--- a/GoldenLeague.StatisticsWorker/appsettings.json
+++ b/GoldenLeague.StatisticsWorker/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueStatisticsWorker;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
@@ -7,6 +10,7 @@
     }
   },
   "AppSettings": {
+    "MatchesInsertEnabled": "true",
     "MatchResultWorkerDelay": "1", // minutes
     "GoldenLeagueApi": {
       "Url": "https://localhost:44306/api/v1",
