Dostosowanie weba do publisha jako Azure App Service

--- a/GoldenLeague.Database/GoldenLeague.Database.csproj
+++ b/GoldenLeague.Database/GoldenLeague.Database.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <Content Include="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <!-- w celu uniknięcia błędu podczas publishu weba: Found multiple publish output files with the same relative path -->
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </Content>
   </ItemGroup>
 
