Api test method and azure integration try

--- a/GoldenLeague.Api/appsettings.Development.json
+++ b/GoldenLeague.Api/appsettings.Development.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueApi;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AppSettings": {
+    "ApiUser": "milton",
+    "ApiPassword": "friedman"
+  },
+  "AllowedHosts": "*"
 }
