--- a/GoldenLeague.Api/appsettings.json
+++ b/GoldenLeague.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueApi;Integrated Security=True"
+    "GoldenLeagueDB": "Data Source=goldenleague.database.windows.net,1433;Initial Catalog=GoldenLeagueDB;User ID=zlotyy;Password=zaq1@wsxc"
   },
   "Logging": {
     "LogLevel": {
