--- a/GoldenLeague/appsettings.Development.json
+++ b/GoldenLeague/appsettings.Development.json
@@ -1,9 +1,21 @@
 {
+  "ConnectionStrings": {
+    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueWeb;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AppSettings": {
+    "RestApi": {
+      "Url": "https://localhost:44306/api/v1",
+      "UserName": "milton",
+      "Password": "friedman"
+    },
+    "Secret": "Aliquam_vel_eleifend_lacus._Etiam_hendrerit,_lorem_orci_aliquam"
+  },
+  "AllowedHosts": "*"
 }
