--- a/GoldenLeague/appsettings.json
+++ b/GoldenLeague/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "GoldenLeagueDB": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=GoldenLeague;Application Name=GoldenLeagueWeb;Integrated Security=True"
+    "GoldenLeagueDB": "Data Source=goldenleague.database.windows.net,1433;Initial Catalog=GoldenLeagueDB;User ID=zlotyy;Password=zaq1@wsxc"
   },
   "Logging": {
     "LogLevel": {
@@ -11,7 +11,7 @@
   },
   "AppSettings": {
     "RestApi": {
-      "Url": "https://localhost:44306/api/v1",
+      "Url": "https://goldenleagueapis.azure-api.net/api/v1",
       "UserName": "milton",
       "Password": "friedman"
     },
