--- a/GoldenLeague/client-app/package.json
+++ b/GoldenLeague/client-app/package.json
@@ -19,7 +19,9 @@
     "vue-router": "^3.2.0",
     "vue-the-mask": "^0.11.1",
     "vuetify": "^2.4.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^3.1.3",
+    "vuex-shared-mutations": "^1.0.2"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^1.1.0",
