--- a/GoldenLeague/client-app/package.json
+++ b/GoldenLeague/client-app/package.json
@@ -18,6 +18,7 @@
     "vue-i18n": "^8.26.3",
     "vue-router": "^3.2.0",
     "vue-the-mask": "^0.11.1",
+    "vue-toastify": "^1.8.1",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
     "vuex-persist": "^3.1.3",
