--- a/GoldenLeague.StatisticsWorker/appsettings.json
+++ b/GoldenLeague.StatisticsWorker/appsettings.json
@@ -18,6 +18,10 @@
     },
     "FantasyApi": {
       "Url": "https://fantasy.premierleague.com/api/"
+    },
+    "FootballApi": {
+      "Url": "https://v3.football.api-sports.io/",
+      "ApiKey": "598edf6cd9b8401d8699c1dff834d247"
     }
   }
 }
