SetMatchesData + triggers + procedures

--- a/GoldenLeague.StatisticsWorker/appsettings.json
+++ b/GoldenLeague.StatisticsWorker/appsettings.json
@@ -10,7 +10,8 @@
     }
   },
   "AppSettings": {
-    "MatchResultWorkerDelay": "60", // minutes
+    "FrequentWorkerDelay": "60", // minutes
+    "InFrequentWorkerDelay": "480", // minutes
     "GoldenLeagueApi": {
       "Url": "https://localhost:44306/api/v1",
       "UserName": "milton",
